# school_districts

./: .envrc  .gitattributes  .gitignore  README.md  find_school_districts.py  pyproject.toml
data/: school_data.csv  schools_with_coords.csv  schools_with_districts.csv
data/us_school_districts/: EDGE_SCHOOLDISTRICT_TL_23_SY2223.dbf  EDGE_SCHOOLDISTRICT_TL_23_SY2223.sbn  EDGE_SCHOOLDISTRICT_TL_23_SY2223.sbx
